force-app/main/default/objects/Account/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <description>Employer Identification Number also known as the Federal Tax Identification Number (FTIN).</description>
    <inlineHelpText>Employer Identification Number also known as the Federal Tax Identification Number (FTIN).
Nine Digits i.e. 12-3456789</inlineHelpText>
    <label>EIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>