force-app/main/default/objects/Account/fields/Full_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Legal_Name__c</fullName>
    <description>Stores the official, legally registered name of the organization or entity as recognized by government or legal authorities.</description>
    <inlineHelpText>Enter the complete legal name of the company or organization exactly as it appears on official documents such as business licenses, contracts, or tax records. This field ensures accurate legal identification and should not include abbreviations or informal names.</inlineHelpText>
    <label>Full Legal Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>