force-app/main/default/objects/Account/fields/General_Company_Email__c.field-meta.xml
<CustomField>
    <fullName>General_Company_Email__c</fullName>
    <description>Stores the official company email address used for general inquiries, client communication, and business correspondence.</description>
    <inlineHelpText>Stores the official company email address used for general inquiries, client communication, and business correspondence.</inlineHelpText>
    <label>General Company Email</label>
    <type>Email</type>
</CustomField>