force-app/main/default/objects/Account/fields/Important_Note__c.field-meta.xml
<CustomField>
    <fullName>Important_Note__c</fullName>
    <label>Important Note</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>