force-app/main/default/objects/Account/fields/Insurance_Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider_Type__c</fullName>
    <description>Specifies the category or classification of the insurance provider represented by the Account record (e.g., Auto &amp; Home, Commercial P&amp;C, Health/Medicare, Life Insurance, etc.).</description>
    <inlineHelpText>Select the type of insurance provider this account represents. Common types ( Auto &amp; Home, Commercial P&amp;C, Health/Medicare, Life Insurance, etc.). This classification helps in reporting, compliance, and eligibility processing.</inlineHelpText>
    <label>Insurance Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto &amp; Home</fullName>
            </value>
            <value>
                <fullName>Commercial P&amp;C</fullName>
            </value>
            <value>
                <fullName>Health/Medicare</fullName>
            </value>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>