force-app/main/default/objects/Account/recordTypes/Client_Business.recordType-meta.xml
<RecordType>
    <fullName>Client_Business</fullName>
    <active>true</active>
    <description>Used to track and manage business clients who purchase insurance policies. This record type helps store company details, policy information, coverage history, and key contacts to streamline client relationship management.</description>
    <label>Client Business</label>
</RecordType>