force-app/main/default/objects/Account/validationRules/EIN_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>EIN_Validation_Rule</fullName>
    <active>true</active>
    <description>EIN must be in the format XX-XXXXXXX (e.g., 12-3456789).</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(EIN__c)),
    NOT(REGEX(EIN__c, &quot;^[0-9]{2}-[0-9]{7}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>EIN__c</errorDisplayField>
    <errorMessage>EIN must be in the format XX-XXXXXXX 
(e.g., 12-3456789).</errorMessage>
</ValidationRule>