force-app/main/default/objects/Account/listViews/All_Agents.listView-meta.xml
<ListView>
    <fullName>All_Agents</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_BIRTHDATE</columns>
    <columns>IS_PERSON_ACCOUNT</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Agent</value>
    </filters>
    <label>All Agents</label>
</ListView>