force-app/main/default/objects/Account/listViews/All_Insurance_Providers.listView-meta.xml
<ListView>
    <fullName>All_Insurance_Providers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Full_Legal_Name__c</columns>
    <columns>Insurance_Provider_Type__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Insurance_Provider</value>
    </filters>
    <label>All Insurance Providers</label>
</ListView>