force-app/main/default/objects/Account/listViews/All_Vendors.listView-meta.xml
<ListView>
    <fullName>All_Vendors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>IS_PERSON_ACCOUNT</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Vendor</value>
    </filters>
    <label>All Vendors</label>
</ListView>